Progress on box sort

--- a/app/assets/stylesheets/application/quizzes/_multiple_choice_result.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_multiple_choice_result.css.sass
@@ -17,12 +17,13 @@
     margin-left: 45px
 
   li
+    position: relative
     padding: 5px 0
 
   li.status_right, li.status_wrong
     &:before
-      margin-left: -43px
-      margin-right: 26px
+      position: absolute
+      left: -42px
       font-size: 1.5em
       font-weight: bold
 
