--- a/app/views/quizzes/_box_sort_question_key_image.html.haml
+++ b/app/views/quizzes/_box_sort_question_key_image.html.haml
@@ -1,6 +1,8 @@
-.span4
-  %img.key-image{src: image[:url], class: image[:display_class]}
-  .key-image-information
+.row
+  .span4
+    %img.img-polaroid.key-image{src: image[:url]}
+
+  .span2.key-image-information
     %span This is a key image, because:
     %p= image[:key_explanation]
 
