--- a/app/assets/stylesheets/application/quizzes/_box_sort_result.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_box_sort_result.css.sass
@@ -23,12 +23,6 @@
   img.key-image
     border: 5px solid transparent
     width: 100%
-    &.correct
-      border-color: $green
-    &.incorrect
-      border-color: $red
-    &.ambivalent
-      border-color: $grayMedium
 
   .key-image-information
     padding: 20px 10px
@@ -39,3 +33,17 @@
     p
       +font-serif-medium
 
+    p.correct, p.incorrect, p.ambivalent
+      &:before
+        font-size: 1.5em
+        font-weight: bold
+        padding-right: 8px
+
+    p.correct
+      &:before
+        content: "\2714"
+        color: $green
+    p.incorrect, p.ambivalent
+      &:before
+        content: "\2716"
+        color: $red
