--- a/app/views/quizzes/_box_sort_question_result.html.haml
+++ b/app/views/quizzes/_box_sort_question_result.html.haml
@@ -1,11 +1,10 @@
-.row.box-sort-result
+.row
   .span12
     %span.type Question
     %span.count #{result[:order]}
     %h4!= result[:instructions]
 
-.row.box-sort-result
-  .span12
-    - result[:key_images].each do |image|
-      = render 'quizzes/box_sort_question_key_image', image: image
+- result[:key_images].each do |image|
+  .box-sort-result
+    = render 'quizzes/box_sort_question_key_image', image: image
 
