remove title from activity show and decrease spacing

--- a/app/assets/stylesheets/application/_base.css.sass
+++ b/app/assets/stylesheets/application/_base.css.sass
@@ -37,7 +37,9 @@ p
 .hero-well
   background: $white
   padding: 20px 0
-  border-bottom: 1px solid $grayLight
+.activity-hero
+  padding-bottom: 0px
+  margin-bottom: 0px
 
 .hero-comments
   margin-bottom: 0
