--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -6,7 +6,7 @@
 
   = render 'courses/navigation', model: activity, disqus_id: disqus_id, syllabus_copy: syllabus_copy
 
-  .hero-unit.hero-well.noprint
+  .hero-unit.hero-well.noprint.activity-hero
     .container
       - if activity.youtube_id?
         .row.top-video
