--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -41,3 +41,12 @@
 @import application/colorbox
 
 
+@font-face
+  font-family: 'FontAwesome'
+  src: url("http://www.chefsteps.com/assets/fonts/fontawesome-webfont.eot")
+  src: url("http://www.chefsteps.com/assets/fonts/fontawesome-webfont.eot?#iefix") format("embedded-opentype"), url("http://www.chefsteps.com/assets/fonts/fontawesome-webfont.woff") format("woff"), url("http://www.chefsteps.com/assets/fonts/fontawesome-webfont.ttf") format("truetype"), url("http://www.chefsteps.com/assets/fonts/fontawesome-webfont.svgz#FontAwesomeRegular") format("svg"), url("http://www.chefsteps.com/assets/fonts/fontawesome-webfont.svg#FontAwesomeRegular") format("svg")
+  font-weight: normal
+  font-style: normal
+
+
+
