--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -42,11 +42,8 @@
 
 
 @font-face
-  font-family: 'FontAwesome'
-  src: url("http://www.chefsteps.com/assets/fontawesome-webfont-dbd879a82f4e951a05c3c375ed7b6ebd.eot")
-  src: url("http://www.chefsteps.com/assets/fontawesome-webfont-dbd879a82f4e951a05c3c375ed7b6ebd.eot?#iefix") format("embedded-opentype"), url("http://www.chefsteps.com/assets/fontawesome-webfont-dbd879a82f4e951a05c3c375ed7b6ebd.woff") format("woff"), url("http://www.chefsteps.com/assets/fontawesome-webfont-dbd879a82f4e951a05c3c375ed7b6ebd.ttf") format("truetype"), url("http://www.chefsteps.com/assets/fontawesome-webfont-dbd879a82f4e951a05c3c375ed7b6ebd.svgz#FontAwesomeRegular") format("svg"), url("http://www.chefsteps.com/assets/fontawesome-webfont-dbd879a82f4e951a05c3c375ed7b6ebd.svg#FontAwesomeRegular") format("svg")
-  font-weight: normal
+  font-family: "FontAwesome"
   font-style: normal
-
-
+  font-weight: normal
+  src: url("http://www.chefsteps.com/assets/fontawesome-webfont.eot?#iefix") format("eot"), url("http://www.chefsteps.com/assets/fontawesome-webfont-19ba21c59911720b41224c9f6ad0e64a.woff") format("woff"), url("http://www.chefsteps.com/assets/fontawesome-webfont-97f946b8240f8d1902d0a015dd16a723.ttf") format("truetype"), url("http://www.chefsteps.com/assets/fontawesome-webfont.svgz#FontAwesomeRegular") format("svg"), url("http://www.chefsteps.com/assets/fontawesome-webfont.svg#FontAwesomeRegular") format("svg")
 
