--- a/app/views/admin/activities/_show.html.haml
+++ b/app/views/admin/activities/_show.html.haml
@@ -8,6 +8,9 @@
             %th Published
             %td= activity.published
           %tr
+            %th Module Head?
+            %td= activity.is_module_head
+          %tr
             %th Link
             %td= link_to_publishable(activity)
           %tr
