--- a/app/views/admin/courses/_show.html.haml
+++ b/app/views/admin/courses/_show.html.haml
@@ -21,5 +21,5 @@
             %td
               %ul
                 - course.activities.each do |activity|
-                  %li= link_to activity.title, admin_activity_path(activity)
+                  %li= link_to activity.admin_title, admin_activity_path(activity)
 
