--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -21,7 +21,7 @@
         :markdown
           #{course.description}
       .span4.pull-right
-        = render 'course_breakdown', copy: syllabus_copy
+        = render 'course_breakdown'
       .span8.pull-left
         %h3 Instructors
         %ul.unstyled
