More syllabus progress

--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -18,6 +18,7 @@
 
     .row.course-info
       .span8
+        %h1 Description
         :markdown
           #{course.description}
       .span4.pull-right
