--- a/app/views/courses/_course_breakdown.html.haml
+++ b/app/views/courses/_course_breakdown.html.haml
@@ -1,7 +1,9 @@
 %ul.course-breakdown.unstyled
   %li
     %h3 Syllabus
-  %li.module
-    %ol
-      - course.activities.each do |activity|
-        %li= activity.title
+  -course.moduled_activities.each_with_index do |m, idx|
+    %li.module
+      %h4= "Module " + (idx + 1).to_s + ": " + m.shift.title
+      %ol
+        - m.each do |activity|
+          %li= activity.title
