--- a/app/views/courses/_navigation.html.haml
+++ b/app/views/courses/_navigation.html.haml
@@ -9,12 +9,12 @@
               %h4= raw model.title
 
         %ul.nav.nav-anchors.pull-right
-          - if model.prev.present?
+          - if nil && model.prev.present?
             %li
               = link_to model.prev do
                 %i.icon-double-chevron-left
                 %span.nav-label &nbsp;Prev
-          - if model.next.present?
+          - if nil && model.next.present?
             %li
               = link_to model.next do
                 %span.nav-anchors.nav-label Next&nbsp;
@@ -39,5 +39,5 @@
 
 #syllabus-body
   #syllabus-body-inner
-    = render 'courses/course_breakdown', copy: syllabus_copy
+    = render 'courses/course_breakdown', course: Course.find_by_slug('gelatin-molds')
 
