--- a/app/views/courses/_navigation.html.haml
+++ b/app/views/courses/_navigation.html.haml
@@ -6,17 +6,17 @@
         %ul.nav.nav-activities
           %li.navbar-activity-title
             .navbar-text
-              %h4= raw model.title
+              %h4= raw activity.title
 
         %ul.nav.nav-anchors.pull-right
-          - if nil && model.prev.present?
+          - if prev_activity = course.prev_published_activity(activity)
             %li
-              = link_to model.prev do
+              = link_to course_activity_path(course, prev_activity) do
                 %i.icon-double-chevron-left
                 %span.nav-label &nbsp;Prev
-          - if nil && model.next.present?
+          - if next_activity = course.next_published_activity(activity)
             %li
-              = link_to model.next do
+              = link_to course_activity_path(course, next_activity) do
                 %span.nav-anchors.nav-label Next&nbsp;
                 %i.icon-double-chevron-right
           %li#syllabus-flyout
@@ -28,7 +28,7 @@
           %li
             %a.icon-print.icon-white{href: "#", onclick: 'window.print()'}
               %span.nav-label Print
-          - if show_quizzes? && model.has_quizzes?
+          - if show_quizzes? && activity.has_quizzes?
             %li
               %a.icon-trophy.icon-white{href: '#quizzes'}
                 %span.nav-label Quiz
