--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -1,4 +1,4 @@
-- content_for :title, 'Accelerated Sous Vide Cooking'
+- content_for :title, course.title
 
 - cache ['course', version] do
   .hero-unit.course-title
