--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -3,8 +3,9 @@
   - disqus_id = "activity-#{activity.id}"
 
   - content_for :title, activity.title.html_safe
+  - course = Course.find(params[:course_id]) if params[:course_id]
 
-  = render 'courses/navigation', course: Course.find(params[:course_id]), activity: activity, disqus_id: disqus_id, syllabus_copy: syllabus_copy
+  = render 'courses/navigation', course: course, activity: activity, disqus_id: disqus_id
 
   .hero-unit.hero-well.noprint.activity-hero
     .container
