--- a/app/views/courses/_navigation.html.haml
+++ b/app/views/courses/_navigation.html.haml
@@ -9,12 +9,12 @@
               %h4= raw activity.title
 
         %ul.nav.nav-anchors.pull-right
-          - if prev_activity = course.prev_published_activity(activity)
+          - if course && (prev_activity = course.prev_published_activity(activity))
             %li
               = link_to course_activity_path(course, prev_activity) do
                 %i.icon-double-chevron-left
                 %span.nav-label &nbsp;Prev
-          - if next_activity = course.next_published_activity(activity)
+          - if course && (next_activity = course.next_published_activity(activity))
             %li
               = link_to course_activity_path(course, next_activity) do
                 %span.nav-anchors.nav-label Next&nbsp;
@@ -47,9 +47,10 @@
 
 
 #syllabus-body
-  :javascript
-    course_title = "#{course.title}"
+  -if course
+    :javascript
+      course_title = "#{course.title}"
 
-  #syllabus-body-inner
-    = render 'courses/course_breakdown', course: course
+    #syllabus-body-inner
+      = render 'courses/course_breakdown', course: course
 
