Added 2nd level of hierarchy for activities

--- a/app/views/admin/activities/_show.html.haml
+++ b/app/views/admin/activities/_show.html.haml
@@ -8,8 +8,8 @@
             %th Published
             %td= activity.published
           %tr
-            %th Module Head?
-            %td= activity.is_module_head
+            %th Nesting Level
+            %td= activity.nesting_level_name
           %tr
             %th Link
             %td= link_to_publishable(activity)
