--- a/app/views/admin/courses/_activity_form.haml
+++ b/app/views/admin/courses/_activity_form.haml
@@ -6,7 +6,7 @@
   activity_id = is_template ? nil : activity.id
 
 %tr{id: row_id, class: ('activity-row' if is_template )}
-  %td
+  %td{class: (activity.nesting_level_class if ! is_template)}
     = select_tag "course[activities][]", options_from_collection_for_select(Activity.all, "id", "admin_title", activity_id), include_blank: true
     = remove_button 'tr'
     = reorder_icon
