Progress towards properly nested activities

--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -73,6 +73,28 @@ body.admin_namespace
       font-size: 16px
       cursor: move
 
+  .sortable.allow-nested
+    .placeholder
+      background-color: #cfcfcf
+
+      margin: 0 0 0 25px
+      padding: 0
+      list-style-type: none
+
+    li
+      margin: 7px 0 0 30px
+      padding: 0px
+      max-width: 300px
+
+      div
+        padding: 5px
+        margin: 0
+        cursor: move
+        border: 1px solid #999
+        background: #c2c2c2
+        color: #333
+
+
   fieldset.inputs.no-background
     background: none
 
