--- a/app/views/admin/courses/_form.html.haml
+++ b/app/views/admin/courses/_form.html.haml
@@ -8,13 +8,26 @@
 
   = section("Activities", f) do
     = hidden_field_tag "activity_hierarchy"
-    %li= copy_button('Add Activity', '#activity-row', 'table#activities')
-    %ol.sortable.allow-nested
-      - @course.activities.each do |activity|
-        %li{id: "act_" + activity.id.to_s}
-          %div
-            =activity.title
-            =remove_button 'li'
+
+    .control-row
+      = select_tag "activity_select", options_from_collection_for_select(Activity.all, "id", "title")
+      = add_activity_to_list_button('Add Module', '#activity_select', '#activity_list', "#template_module")
+      = add_activity_to_list_button('Add Activity', '#activity_select', '#activity_list > li:last-child > ol', "#template_activity")
+
+    // templates for add buttons to copy
+    %li#template_activity
+      %div
+        Replace
+        =remove_button 'li'
+
+    %li#template_module
+      %div
+        Replace
+        =remove_button 'li'
+      %ol
+
+    .nested-activity-list-shared
+      =render partial: 'shared/nested_activities', :locals => {:for_form => true}
 
   = f.actions do
     = f.action :submit, wrapper_html: {class: "return_activities"}
