--- a/app/assets/stylesheets/application/activities/_overview.css.sass
+++ b/app/assets/stylesheets/application/activities/_overview.css.sass
@@ -72,7 +72,7 @@ table.ingredients
   text-transform: none
   font-weight: normal
   padding: 0 1em 2em 1em
-  ul
+  ol
     list-style-type: none
 
   h3
@@ -81,7 +81,7 @@ table.ingredients
     color:  black
     text-align: center
 
-  h4
+  .module
     +font-sans-small
     color:  black
     text-transform: uppercase
