--- a/app/views/courses/_course_breakdown.html.haml
+++ b/app/views/courses/_course_breakdown.html.haml
@@ -1,21 +1,11 @@
-%ul.course-breakdown.unstyled
-  %li
-    %h3 Syllabus
-  -course.hierarchical_inclusions.each_with_index do |m, idx|
-    %li.module
-      %h4= "Module " + (idx + 1).to_s + ": " + m.shift[0].activity.title
-      %ol
-        - m.each do |inclusion_group|
-          -inclusion = inclusion_group.shift
-          -activity = inclusion.activity
-          -if activity.published?
-            %li= link_to (raw activity.title), course_activity_path(course, activity)
-          -else
-            %li= raw activity.title
-          %ul
-            -inclusion_group.each do |sub_inclusion|
-              -sub_activity = sub_inclusion.activity
-              -if sub_activity.published?
-                %li= link_to (raw sub_activity.title), course_activity_path(course, sub_activity)
-              -else
-                %li= raw sub_activity.title
+.course-breakdown.unstyled
+
+  %h3 Syllabus
+
+  .nested-activity-list-shared.nested-activity-list-pretty
+    =render layout: 'shared/nested_activities', :locals => {for_form: false, course: course} do |incl|
+      - do_link = (incl.nesting_level != 0) && incl.activity.published?
+      - if ! do_link
+        = raw incl.activity.title.strip
+      - else
+        = link_to (raw incl.activity.title.strip), course_activity_path(course, incl.activity)
