--- a/app/assets/stylesheets/application/activities/_overview.css.sass
+++ b/app/assets/stylesheets/application/activities/_overview.css.sass
@@ -84,10 +84,12 @@ table.ingredients
   .module
     +font-sans-small
     color:  black
-    text-transform: uppercase
-    font-weight: bold
     margin-top: 10px
     margin-bottom: 0
+    > div
+      text-transform: uppercase
+      font-weight: bold
+
 
   .col
     float: left
