--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -139,22 +139,30 @@ body.admin_namespace
   // nested activity stuff for both edit and show view
   .nested-activity-list-shared
     counter-reset: module-counter
-    .module
+    >ol >li
       margin-top: 20px
       list-style-type: none
 
       > div
         text-transform: uppercase
         font-weight: bold
-        // Once I added the disclosure stuff, (removing the x below) causes
-        // some sort of horrific bug when you start dragging in webkit
-        .xactivity-title
+        .activity-title
           &:before
-            content: 'MODULE ' counter(module-counter) ':  '
+            // I tried having the module counter show up in the content below
+            // and it made webkit flip out during drag&drop. So using it only in
+            // the show view.
+            content: "MODULE: "
             counter-increment: module-counter
 
   // nested activity stuff for show only
   .nested-activity-list-pretty
+
+    .module
+      > div
+        &:before
+          content: "MODULE " counter(module-counter) ": "
+          counter-increment: module-counter
+
     .activity
       list-style-type: decimal
 
