Remove show_quiz feature flag, we always want it on

--- a/app/views/activities/_quizzes.html.haml
+++ b/app/views/activities/_quizzes.html.haml
@@ -1,4 +1,4 @@
-- if show_quizzes? and activity.has_quizzes?
+- if activity.has_quizzes?
   #quizzes.hero-well.noprint
     .container
       - activity.quizzes.each_slice(3) do |quizzes|
