--- a/app/assets/stylesheets/application/activities/_overview.css.sass
+++ b/app/assets/stylesheets/application/activities/_overview.css.sass
@@ -57,6 +57,12 @@ table.ingredients
       td:first-child
         width: 100%
 
+    .quantity-edit
+      margin-bottom: 0px
+      input
+        text-align: right
+        width: 40px
+
 .cooked-this-count
   margin-top: 15px
 
