grams scaling works

--- a/app/assets/stylesheets/application/activities/_overview.css.sass
+++ b/app/assets/stylesheets/application/activities/_overview.css.sass
@@ -6,9 +6,6 @@
     +font-serif-medium
     color: $gray
     text-transform: uppercase
-  span
-    text-transform: uppercase
-    font-weight: bold
   .horizontal-divider
     margin: 10px 0
   .difficulty
@@ -48,7 +45,7 @@ table.ingredients
       cursor: pointer
 
   tbody
-    .quantity
+    .quantity-group
       text-align: right
     tr
       color: $black
@@ -61,7 +58,6 @@ table.ingredients
       margin-bottom: 0px
       input
         text-align: right
-        width: 40px
 
 .cooked-this-count
   margin-top: 15px
