--- a/app/assets/stylesheets/application.css.sass.erb
+++ b/app/assets/stylesheets/application.css.sass.erb
@@ -36,6 +36,8 @@
 @import application/users/forms
 
 @import twitter/bootstrap/responsive
+@import twitter/bootstrap/popovers
+@import twitter/bootstrap/tooltip
 @import application/media_queries
 
 @import application/colorbox
