--- a/app/assets/stylesheets/application/activities/_overview.css.sass
+++ b/app/assets/stylesheets/application/activities/_overview.css.sass
@@ -56,8 +56,13 @@ table.ingredients
 
     .quantity-edit
       margin-bottom: 0px
+      display: inline
       input
         text-align: right
+
+    .lbs-label
+      margin-right: 4px
+
 
 .cooked-this-count
   margin-top: 15px
