--- a/app/assets/stylesheets/application/_base.css.sass
+++ b/app/assets/stylesheets/application/_base.css.sass
@@ -195,3 +195,10 @@ iframe
 [rel=infotip]
   &:hover
     text-decoration: none
+  i
+    &:before
+      font-size: 125%
+      vertical-align: middle
+
+.tooltip-inner
+  text-transform: none
