--- a/app/views/activities/_ingredients_list.html.haml
+++ b/app/views/activities/_ingredients_list.html.haml
@@ -10,7 +10,7 @@
       %th#quantity{colspan: 2}
         %a.change_units{title: "Click to change units"} Quantity
         %a#recipetip{href: "#", rel: "infotip", "data-original-title" => "Click on column header to change units, or any value to scale the recipe."}
-          %i.icon-cog
+          %i.icon-question-sign
 
   %tbody
     - recipe.ingredients.each do |ingredient|
