divs instead of spans

--- a/app/assets/stylesheets/application/activities/_overview.css.sass
+++ b/app/assets/stylesheets/application/activities/_overview.css.sass
@@ -47,6 +47,8 @@ table.ingredients
   tbody
     .quantity-group
       text-align: right
+      div
+        display: inline-block
     tr
       color: $black
       td
