--- a/app/views/activities/_ingredients_list.html.haml
+++ b/app/views/activities/_ingredients_list.html.haml
@@ -21,8 +21,8 @@
           - else
             = ingredient.title
         %td.quantity-group.qtyfade
-          %span.lbs-qty
-          %span.lbs-label
-          %span.main-qty= ingredient.display_quantity
+          .lbs-qty
+          .lbs-label
+          .main-qty= ingredient.display_quantity
         %td.unit.qtyfade= ingredient.unit
 
