resolve width problem

--- a/app/assets/stylesheets/application/activities/_overview.css.sass
+++ b/app/assets/stylesheets/application/activities/_overview.css.sass
@@ -61,6 +61,7 @@ table.ingredients
       display: inline
       input
         text-align: right
+        width: 40px !important
 
     .lbs-label
       margin-right: 4px
