--- a/app/assets/stylesheets/application/activities/_step_by_step.css.sass
+++ b/app/assets/stylesheets/application/activities/_step_by_step.css.sass
@@ -31,6 +31,13 @@
       border: 1px solid $grayLight
       +border-radius(0)
 
+  .ingredients
+    margin-top: 0px
+    line-height: 18px
+    .well
+      padding-top: 3px
+
+
 .hero-step-by-step
   margin-top: 0px
   padding-bottom: 20px
