more iphone tweakage

--- a/app/views/activities/_ingredients_list.html.haml
+++ b/app/views/activities/_ingredients_list.html.haml
@@ -1,7 +1,7 @@
 %table.ingredients
   %colgroup
     %col{width: "70%"}
-    %col{width: "24%"}
+    %col{width: "120px"}
     %col{width: "6%"}
 
   %thead
