--- a/app/views/activities/_step.html.haml
+++ b/app/views/activities/_step.html.haml
@@ -7,7 +7,7 @@
         %table.ingredients
           %colgroup
             %col{width: "66%"}
-            %col{width: "28%"}
+            %col{width: "120px"}
             %col{width: "6%"}
           %thead
             %tr
