--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -3,16 +3,13 @@
 - cache ['home', version, user_signed_in?] do
   .hero-unit.hero-well.hero-home-video
     .container.signup-banner
-      .row.top-video
-        .span12
-          .video-container
-            %iframe{src: youtube_url(@featured_video) }
+      .video-container
+        %iframe{src: youtube_url(@featured_video) }
   .container
-    .row
-      .filmstrip
-        - @filmstrip.each do |video|
-          .filmstrip-item
-            %iframe{src: youtube_url(video.youtube_id) }
+    .filmstrip
+      - @filmstrip.each do |video|
+        .filmstrip-item{ data: {youtube: video.youtube_id} }
+          = image_tag youtube_image(video.youtube_id,0)
 
   .hero-unit.signup-banner
     .container
