use canonical link for disqus

--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -23,4 +23,4 @@
   = render 'quizzes', activity: activity
   = render 'cooked_this_button', activity: activity
 
-  = render 'layouts/disqus_comments', disqus_id: disqus_id, disqus_title: activity.title
+  = render 'layouts/disqus_comments', disqus_id: disqus_id, disqus_title: activity.title, disqus_url: activity_url
