--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -44,5 +44,5 @@
           .row
             .span8.horizontal-divider
 
-= render 'layouts/disqus_comments', disqus_id: 'course-1', disqus_title:course.title
+= render 'layouts/disqus_comments', disqus_id: 'course-1', disqus_title:course.title, disqus_url: course_url
 
