--- a/app/assets/stylesheets/application/_home.css.sass
+++ b/app/assets/stylesheets/application/_home.css.sass
@@ -42,9 +42,14 @@
 
 .filmstrip
   text-align: center
-  height: 175px
   margin-bottom: 20px
   .filmstrip-item
     float: left
-    width: 234px
+    width: 20%
+    position: relative
+    &:hover
+      cursor: pointer
+      opacity: .8
+    .filmstrip-item-title
+      font-size: 12px
 
