--- a/app/assets/stylesheets/application/_home.css.sass
+++ b/app/assets/stylesheets/application/_home.css.sass
@@ -50,6 +50,10 @@
     &:hover
       cursor: pointer
       opacity: .8
+    .filmstrip-item-img
+      overflow: hidden
+      img
+        margin: -10%
     .filmstrip-item-title
       font-size: 12px
 
