--- a/app/assets/stylesheets/application/media_queries.css.sass
+++ b/app/assets/stylesheets/application/media_queries.css.sass
@@ -6,6 +6,9 @@
   .caption.top-right, .caption.middle-right, .caption.bottom-right
     margin-left: -625px
 
+  .filmstrip-item-img
+    height: 130px
+
 @media (max-width: 1200px)
   .box-sort
     .images
@@ -22,6 +25,9 @@
     .image-pile img
       height: 210px
       width: 371px
+
+  .filmstrip-item-img
+    height: 100px
 
 /* Portrait tablet*/
 @media (max-width: 980px)
@@ -45,6 +51,9 @@
 
   .navbar-activity-title
     display: none
+
+  .filmstrip-item-img
+    height: 80px
 
 @media (max-width: 979px) and (min-width: 768px)
   #quiz-container
@@ -190,6 +199,8 @@
       text-align: left
       padding-left: 5px
 
+  .filmstrip-item-img
+    height: 60px
 
 /* Android phone. Weird inbetween*/
 @media (max-width: 520px)
@@ -322,6 +333,12 @@
           top: 60%
       .option img
         max-width: 145px
+
+  #filmstrip-container
+    margin: 0px -20px
+
+  .filmstrip-item-img
+    height: 40px
 
 /* Everything but portrait iphone*/
 @media (max-width: 480px)
