--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -5,11 +5,12 @@
     .container.signup-banner
       .video-container
         %iframe{src: youtube_url(@featured_video) }
-  .container
+  .container#filmstrip-container
     .filmstrip
       - @filmstrip.each do |video|
         .filmstrip-item{ data: {youtube: video.youtube_id} }
-          = image_tag youtube_image(video.youtube_id,0)
+          .filmstrip-item-img
+            = image_tag youtube_image(video.youtube_id,0)
           .filmstrip-item-title
             = video.title
 
